--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./images/favicon-32x32.png" />
+    <link rel="icon" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Food.Json: Project based Food Recipe App"
     />
-    <link rel="apple-touch-icon" href="./images/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/59f5bc8aeb.js" crossorigin="anonymous"></script>
